# cpp_boost_test

./: CMakeLists.txt  README.md  build_run_vs22.bat  main.cpp
libs/boost/lib/cmake/boost_container-1.85.0/: boost_container-config.cmake
libs/boost/lib/cmake/boost_context-1.85.0/: boost_context-config.cmake
libs/boost/lib/cmake/boost_contract-1.85.0/: boost_contract-config.cmake
libs/boost/lib/cmake/boost_coroutine-1.85.0/: boost_coroutine-config.cmake
libs/boost/lib/cmake/boost_date_time-1.85.0/: boost_date_time-config.cmake
libs/boost/lib/cmake/boost_exception-1.85.0/: boost_exception-config.cmake
libs/boost/lib/cmake/boost_graph-1.85.0/: boost_graph-config.cmake
libs/boost/lib/cmake/boost_graph_parallel-1.85.0/: boost_graph_parallel-config.cmake
libs/boost/lib/cmake/boost_headers-1.85.0/: boost_headers-config.cmake
libs/boost/lib/cmake/boost_iostreams-1.85.0/: boost_iostreams-config.cmake
libs/boost/lib/cmake/boost_mpi-1.85.0/: boost_mpi-config.cmake
libs/boost/lib/cmake/boost_numpy-1.85.0/: boost_numpy-config.cmake
libs/boost/lib/cmake/boost_prg_exec_monitor-1.85.0/: boost_prg_exec_monitor-config.cmake
libs/boost/lib/cmake/boost_program_options-1.85.0/: boost_program_options-config.cmake
libs/boost/lib/cmake/boost_python-1.85.0/: boost_python-config.cmake
libs/boost/lib/cmake/boost_random-1.85.0/: boost_random-config.cmake
libs/boost/lib/cmake/boost_regex-1.85.0/: boost_regex-config.cmake
libs/boost/lib/cmake/boost_serialization-1.85.0/: boost_serialization-config.cmake
(+4 files in other folders)
